src/objects/TransactionItem__c.object
<CustomObject>
    <fields>
        <fullName>BasketSavingsAmount__c</fullName>
        <description>Savings on the total transaction applied to the item</description>
        <label>BasketSavingsAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>E_Receipts_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-Receipts Number</label>
        <referenceTo>Customer_E_Receipts__c</referenceTo>
        <relationshipLabel>TransactionItems</relationshipLabel>
        <relationshipName>TransactionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>E_Receipts_Number__r.Email_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoSavingsAmount__c</fullName>
        <description>Promotion savings on the item</description>
        <label>PromoSavingsAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotions_Amount_Value__c</fullName>
        <description>Numeric value of the savings applied</description>
        <label>Promotions Amount Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotions_CouponCode__c</fullName>
        <description>Coupon code used for the promotion</description>
        <label>Promotions CouponCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotions_Description__c</fullName>
        <description>Description of the promotion</description>
        <label>Promotions Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promotions_Name__c</fullName>
        <description>Name of the promotion</description>
        <label>Promotions Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promotions_Private_Name__c</fullName>
        <description>Name of the promotion</description>
        <label>Promotions Private Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotions_Promo_Id__c</fullName>
        <description>Unique ID for the promotion</description>
        <label>Promotions Promo Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotions_Promo_Type__c</fullName>
        <description>Promotion type (reducedPrice, xyDiscount, basketTotal)</description>
        <label>Promotions Promo Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRate_DisplayCode__c</fullName>
        <description>Code that displays in the virtual and printed receipt; generally defined by government regulations</description>
        <label>TaxRate DisplayCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRate_Id__c</fullName>
        <description>Id of the tax rate</description>
        <label>TaxRate Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRate_Indicator__c</fullName>
        <description>Tax rate indicator for receipts</description>
        <label>TaxRate Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRate_Percentage__c</fullName>
        <description>The actual tax rate</description>
        <label>TaxRate Percentage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRate_TaxAmount__c</fullName>
        <description>Tax Amount</description>
        <label>TaxRate TaxAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxRate_TotalAddOnVAT__c</fullName>
        <description>Total Addon VAT</description>
        <label>TaxRate TotalAddOnVAT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRate_TotalVAT__c</fullName>
        <description>Total VAT Tax</description>
        <label>TaxRate TotalVAT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRates_Description__c</fullName>
        <description>Description of the tax rate</description>
        <label>TaxRates Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRates_IsVAT__c</fullName>
        <description>Identifier to check if the VAT is applicable for this tax rate or not. Values: 0,1,2</description>
        <label>TaxRates IsVAT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRates_TaxExempt__c</fullName>
        <description>if the tax rate item is tax-exempt or not</description>
        <label>TaxRates TaxExempt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRates__c</fullName>
        <label>TaxRates</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <description>The product price before discounts; or if tranItem is the tender line item, then amount is the transaction balance owed</description>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Barcode__c</fullName>
        <description>Product barcode associated with the SKU</description>
        <label>Transaction Barcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Description__c</fullName>
        <description>Product description</description>
        <label>Transaction Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_DiscountAmountTotal__c</fullName>
        <description>Total item discount applied at item level for the qty sold. = qty* discValue ex: 10*1 = 10 for qty 10 and discValue of 1</description>
        <label>Transaction DiscountAmountTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_DiscountPercentage__c</fullName>
        <description>Percentage discount value. This will be populated only when discType =2  Ex: 10 %</description>
        <label>Transaction DiscountPercentage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_DiscountType__c</fullName>
        <description>1=amount, 2=percent, 3=either, 4=fixedPrice</description>
        <label>Transaction DiscountType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_DiscountValue__c</fullName>
        <description>Discount applied on the item - always a dollar amount with currency symbol appeneded in the front - Ex: $ 29.99</description>
        <label>Transaction DiscountValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_ItemName__c</fullName>
        <label>Transaction ItemName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_ProductType__c</fullName>
        <label>Transaction ProductType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Quantity__c</fullName>
        <description>Quantity of the product</description>
        <label>Transaction Quantity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_ReasonCodeDescription__c</fullName>
        <description>Discount description applied at item level</description>
        <label>Transaction ReasonCodeDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_ReferenceItemIdx__c</fullName>
        <description>The itemIdx referenced due to a change to that line item (item discount, item void, etc), otherwise refItemIdx=-1 because it is referencing itself</description>
        <label>Transaction ReferenceItemIdx</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Sku__c</fullName>
        <description>Product SKU</description>
        <label>Transaction Sku</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_TotalValue__c</fullName>
        <description>Total Value Is the final price of the item after applying discounts and promotions (but, before taxes)</description>
        <label>Transaction TotalValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>TransactionItem</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>TransactionItem Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TransactionItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>